samples/openshift/single/elasticsearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: devportal-es
  name: devportal-es
spec:
  podManagementPolicy: Parallel
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: devportal-es
  serviceName: devportal-es-svc
  template:
    metadata:
      labels:
        app: devportal-es
        tuned.openshift.io/elasticsearch: ""
      name: devportal-es
    spec:
      containers:
        - env:
            - name: node.name
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.name
            - name: cluster.name
              value: devportal-es-cluster
            - name: discovery.type
              value: single-node
            - name: network.host
              value: 0.0.0.0
            - name: xpack.security.enabled
              value: "false"
            - name: ES_JAVA_OPTS
              value: -Xmx1g -Xms1g
          image: docker.elastic.co/elasticsearch/elasticsearch:8.2.3
          imagePullPolicy: IfNotPresent
          name: elasticsearch
          ports:
            - containerPort: 9200
              name: http
              protocol: TCP
            - containerPort: 9300
              name: transport
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  [...]
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 3
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 2Gi
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000730000
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: vol
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: vol
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 30Gi
        volumeMode: Filesystem
        storageClassName: manual
